--- a/package.json
+++ b/package.json
@@ -7,5 +7,9 @@
     "@tanstack/react-query": "^5.83.0",
     "viem": "^2.33.0",
     "wagmi": "^2.16.0"
+  },
+  "devDependencies": {
+    "@nomicfoundation/hardhat-toolbox": "^6.1.0",
+    "hardhat": "^2.26.1"
   }
 }
