--- a/paymenow-dapp/frontend/package.json
+++ b/paymenow-dapp/frontend/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@rainbow-me/rainbowkit": "^2.2.8",
+    "@tanstack/react-query": "^5.83.0",
     "ethers": "^6.15.0",
     "next": "15.4.1",
     "qrcode.react": "^4.2.0",
